Bug 256736 - Artistic Style formatter lacks stroustrup and horstmann bracket styles
Summary: Artistic Style formatter lacks stroustrup and horstmann bracket styles
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Language Support: CPP (old) (other bugs)
Version First Reported In: 4.1.0
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 4.2.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-12 20:54 UTC by Nikita Churaev
Modified: 2011-02-04 17:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita Churaev 2010-11-12 20:54:03 UTC
Version:           4.1.0
OS:                Linux



Reproducible: Always
Comment 1 Milian Wolff 2010-11-12 22:51:32 UTC
confirmed, we should update our astyle lib and make sure we support all new features
Comment 2 Milian Wolff 2011-02-03 20:59:57 UTC
Git commit 9bca3f98d22286f24afa13648e308062439c9f73 by Milian Wolff.
Committed on 02/02/11 at 21:15.
Pushed by mwolff into branch 'master'.

add support for Stroustrup and Horstmann bracket modes

CCBUG: 256736

M  +13   -1    formatters/astyle/astyle_formatter.cpp     
M  +2    -1    formatters/astyle/astyle_plugin.cpp     
M  +4    -0    formatters/astyle/astyle_preferences.cpp     
M  +10   -0    formatters/astyle/astyle_preferences.ui     

http://commits.kde.org/kdevelop/9bca3f98d22286f24afa13648e308062439c9f73
Comment 3 Milian Wolff 2011-02-04 17:36:06 UTC
Git commit 829facc0ade8c1dfa58b5d1c39e860d8b2a43b06 by Milian Wolff.
Committed on 04/02/11 at 11:43.
Pushed by mwolff into branch 'master'.

add new formatting styles

BUG: 256736

M  +63   -0    formatters/astyle/astyle_formatter.cpp     
M  +20   -27   formatters/astyle/astyle_plugin.cpp     

http://commits.kde.org/kdevelop/829facc0ade8c1dfa58b5d1c39e860d8b2a43b06