add new formatting styles

BUG: 256736